# jiradatacrew

./: README.md  pyproject.toml
output/: report.md  testMD.py
src/jiradatacrew/: crew.py  main.py
src/jiradatacrew/config/: agents.yaml  crews.yaml  logs.yaml  tasks.yaml  validation.yaml
src/jiradatacrew/tools/: custom_tool.py
